# doc-intelligence

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-improver.md
.claude/commands/: qa.md  test.md  typecheck.md  update-specs.md
.cursor/rules/: project-context.mdc  python-coding-standards.mdc  testing-conventions.mdc
.github/workflows/: deploy-docs.yml  release.yml
custom-ocr/: index.html
doc_intelligence/: __init__.py  base.py  config.py  extract.py  extractor.py  llm.py  parser.py  pydantic_to_json_instance_schema.py  restrictions.py  utils.py
doc_intelligence/ocr/: __init__.py  base.py  paddle.py
doc_intelligence/pdf/: extractor.py  parser.py  (+6 more)
docs/: custom-ocr.md  index.md  quickstart.md  scanned-pdfs.md
document_ai/: __init__.py  base.py  extractor.py  formatter.py  llm.py  parser.py  processer.py  schemas.py  types.py  utils.py
frontend/: main.py
notebooks/: architecture.drawio  general.ipynb  lab.ipynb  lab.py  layout_ocr.py  pydantic_model_lab.ipynb  utils.py
quickstart/: index.html
scanned-pdfs/: index.html
search/: search_index.json
specs/: engineering_design.md  integration_testing.md  notepad.md  ocr_pipeline_implementation.md  prd.md  project_status.md
tests/: conftest.py  test_base.py  test_config.py  test_extract.py  test_extractor.py  test_formatter.py  test_init.py  test_llm.py  test_parser.py  test_processer.py  test_pydantic_to_json_instance_schema.py  test_restrictions.py  test_utils.py
tests_integration/: conftest.py  test_anthropic_integration.py  test_gemini_integration.py  test_llm_playground.py  test_ollama_integration.py  test_openai_integration.py
(+47 files in other folders)
